# omnic

./: .gitignore  README.md  spec.md
core/: README.md  config.json  hardhat.config.ts
core/evm/: .env.example  .gitignore  README.md  config.json  hardhat.config.ts  package-lock.json  package.json
core/evm/constants/: config.json
core/evm/contracts/: Demo.sol  DemoApp.sol  IMessageRecipient.sol  Omnic.sol  OmnicBase.sol  OmnicEndpoint.sol  OmnicFeeManage.sol  OmnicFeeManager.sol  OmnicNode.sol  Queue.sol  VersionManage.sol  XAppConectionManage.sol
core/evm/scripts/: deploy-demo.ts  deploy-feemanager.ts  deploy-impl.ts  deploy-proxy.ts  deploy.ts  helpers.ts  process_msg.ts  send-msg.ts  send_msg.ts  send_msg_polygon.ts  send_msgs.ts  send_to_ic.ts  send_to_polygon.ts  set-demo-omnic-addr.ts  set-fee-whitelist.ts  set_demo_omnic_addr.ts  set_proxy_canister.ts  upgrade-impl.ts
core/evm/scripts-old/: deploy.ts  deploy_demo.ts  process_msg.ts  send_to_polygon.ts  set_omnic_addr.ts
core/evm/test/: Omnic.ts
core/ic/: .gitignore  Cargo.toml  canister_ids.json  dfx.json  local_shell.sh  readme.md  start.sh
core/ic/accumulator/: Cargo.toml
core/ic/accumulator/src/: error.rs  full.rs  lib.rs  light.rs  proof.rs  tree.rs  wasm.rs
core/ic/refactor/: chain.rs  chain_config.rs  chain_info.rs  chain_roots.rs  history.rs  main.rs  message.rs  proxy.rs  raw_message.rs  relayer.rs
core/ic/refactor/accumulator/: README.md
core/ic/refactor/accumulator/src/: full.rs  utils.rs
core/ic/src/: call.rs  chain_state.rs  config.rs  consts.rs  demo.rs  error.rs  home.rs  lib.rs  main.rs  message_db.rs  omnic.did  omnic.json  omnic.old.did  root_db.rs  state.rs  types.rs  utils.rs
core/ic/src/agents/: demo.did  demo.rs  proxy.did  proxy.old.did  relayer.did
core/ic/src/agents/proxy/: main.rs  omnic.abi
core/ic/src/agents/relayer/: main.rs
core/ic/src/canisters/: demo.did  demo.rs  gateway.did  gateway.old.did  gateway.rs  main.rs  proxy.did  proxy.old.did  proxy.rs
core/ic/src/chains/: config.rs  evm.rs  mod.rs  omnic.abi
core/ic/src/chains/evm/: mod.rs
core/ic/src/traits/: chain.rs  encode.rs  mod.rs
core/ic/src/types/: message.rs  mod.rs  raw_message.rs
core/scripts/: deploy_evm.ts  deploy_ic.ts  process_msgs.ts  send_msg.ts
omnic-bridge/: README.md  package.json
omnic-bridge/evm/: .gitignore  BirdgeRouter.sol  BirdgeWrapperToken.sol  README.md  WrapperERC20.sol  config.json  hardhat.config.ts  package.json
omnic-bridge/evm/contracts/: Birdge.sol  BirdgeRouter.sol  BirdgeWrapperToken.sol  Bridge.sol  BridgeRouter.sol  ERC20.sol  FactoryPool.sol  Pool.sol  Router.sol
omnic-bridge/evm/interfaces/: IBridgeWrapperToken.sol  IMessageRecipient.sol  IOmnic.sol  IXAppConnectionManage.sol
omnic-bridge/evm/scripts/: add-liq.ts  create-pool.ts  deploy-bridge.ts  deploy-usdt.ts  helpers.ts  send-token.ts  swap.ts
omnic-bridge/ic/: Cargo.toml  README.md  bridge.rs  canister_ids.json  dfx.json  error.rs  lib.rs  pool.rs  start.sh  token.rs  types.rs
omnic-bridge/ic/src/: dip20.rs  error.rs  lib.rs  pool.rs  router.rs  (+2 more)
omnic-swap/: README.md
(+49 files in other folders)
