[package]
name = "omnic"
version = "0.1.0"
description = "Omnic Core"
homepage = "https://github.com/rocklabs-io/omnic"
repository = "https://github.com/rocklabs-io/omnic"
license = "MIT"
keywords = ["dfinity", "icp", "web3", "ethereum", "crosschain"]
authors = ["Rocklabs <hello@rocklabs.io>"]
readme = "README.md"
edition = "2018"

[[bin]]
name = "omnic"
path = "src/main.rs"

[dependencies]
ic-web3 = "0.1.0"
ic-cron = "0.7.0"
candid = "0.7.4"
ic-cdk = "0.5.1"
ic-cdk-macros = "0.5.1"
serde = { version = "1.0.137", features = ["derive"]}
serde_json = "1.0.41"
num-traits = "0.2.15"
sha3 = "0.10.1"
hex = "0.4.3"
ic-storage = { git = "https://github.com/infinity-swap/ic-helpers", package = "ic-storage", tag = "v0.3.4" }
