[package]
name = "omnic"
version = "0.1.0"
description = "Omnic Core"
homepage = "https://github.com/rocklabs-io/omnic"
repository = "https://github.com/rocklabs-io/omnic"
license = "MIT"
keywords = ["dfinity", "icp", "web3", "ethereum", "crosschain"]
authors = ["Rocklabs <hello@rocklabs.io>"]
readme = "README.md"
edition = "2018"

[[bin]]
name = "proxy"
path = "src/canisters/proxy.rs"

[[bin]]
name = "demo"
path = "src/canisters/demo.rs"

[dependencies]
accumulator = { path = "./accumulator" }
#ic-web3 = { git = "https://github.com/rocklabs-io/ic-web3" }
ic-web3 = "0.1.5"
#ic-cron = "0.7.0"
ic-cron = { git = "https://github.com/rocklabs-io/ic-cron" }
candid = "0.8.0"
ic-cdk = "0.6"
ic-cdk-macros = "0.6"
serde = { version = "1.0.137", features = ["derive"]}
serde_json = "1.0.41"
num-traits = "0.2.15"
sha3 = "0.10.1"
hex = "0.4.3"
tiny-keccak = { version = "2.0.1", features = ["keccak"] }
thiserror = "*"
async-trait = { version = "0.1.42", default-features = false }
ic-storage = { git = "https://github.com/infinity-swap/ic-helpers", package = "ic-storage", tag = "v0.3.4" }
